# ontoguard-ai

./: .gitignore  CONTRIBUTING.md  GITHUB_PROFILE_README.md  GITHUB_SOCIAL_PREVIEW.md  LAUNCH_SOCIAL_POSTS.md  LICENSE  README.md  RELEASE_v0.1.0.md  SETUP_COMPLETE.md  config.yaml  pyproject.toml
.claude/: CLAUDE.md
examples/: basic_usage.py
examples/ontologies/: finance.owl  healthcare.owl
src/ontoguard/: __init__.py  __main__.py  cli.py  mcp_server.py  validator.py
tests/: __init__.py  test_basic_usage.py  test_benchmarks.py  test_ecommerce_ontology.py  test_finance_ontology.py  test_healthcare_ontology.py  test_validator.py
